Add login state management and dynamic navigation diferent sidbar and header equal to loginSate variable

--- a/legal_notice.html
+++ b/legal_notice.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Legal Notice</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Legal Notice</title>
 
-    <script src="./scripts/template.js" defer></script>
-    <script src="./scripts/header.js" defer></script>
-    <script src="./scripts/navigate.js" defer></script>
-    <script src="./scripts/legal_notice.js" defer></script>
+  <script src="./script.js" defer></script>
+  <script src="./scripts/template.js" defer></script>
+  <script src="./scripts/header.js" defer></script>
+  <script src="./scripts/navigate.js" defer></script>
+  <script src="./scripts/legal_notice.js" defer></script>
 
-    <link rel="icon" href="assets/svg/favicon_logo.svg" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./css/header.css" />
-    <link rel="stylesheet" href="./css/sidebar.css" />
-    <link rel="stylesheet" href="./css/legal_notice.css" />
-  </head>
-  <body onload="initLegalNotice()"></body>
+  <link rel="icon" href="assets/svg/favicon_logo.svg" />
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./css/header.css" />
+  <link rel="stylesheet" href="./css/sidebar.css" />
+  <link rel="stylesheet" href="./css/legal_notice.css" />
+</head>
+<body onload="initLegalNotice()"></body>
 </html>
