--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Privacy Policy</title>
 
-    <script src="./scripts/template.js" defer></script>
-    <script src="./scripts/header.js" defer></script>
-    <script src="./scripts/navigate.js" defer></script>
-    <script src="./scripts/privacy_policy.js" defer></script>
+  <script src="./script.js" defer></script>
+  <script src="./scripts/template.js" defer></script>
+  <script src="./scripts/header.js" defer></script>
+  <script src="./scripts/navigate.js" defer></script>
+  <script src="./scripts/privacy_policy.js" defer></script>
 
-    <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./css/header.css" />
-    <link rel="stylesheet" href="./css/sidebar.css" />
-    <link rel="stylesheet" href="./css/privacy_policy.css" />
-  </head>
-  <body onload="initPrivacyPolicy()"></body>
+  <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
+  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./css/header.css" />
+  <link rel="stylesheet" href="./css/sidebar.css" />
+  <link rel="stylesheet" href="./css/privacy_policy.css" />
+</head>
+<body onload="initPrivacyPolicy()"></body>
 </html>
