The header has been updated to display the user icon conditionally based on the loginState. CSS update for Sidebar and Header => Sidebar left, header over the hole site with content wrapper 1440px

--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
-<header class="header">
+<div class="wrapper">
   <div class="header-content">
     <span class="header-title">Kanban Project Management Tool</span>
     <div class="user-wrapper">
-      <a href="help.html" class="help">
+      <a href="help.html" class="help-link">
         <img src="assets/svg/help.svg" alt="Help" />
       </a>
       <div class="header-user">
@@ -10,4 +10,4 @@
       </div>
     </div>
   </div>
-</header>
+</div>
