add_task category validation

--- a/add_task.html
+++ b/add_task.html
@@ -23,6 +23,6 @@
   <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
 </head>
 
-<body onload="initAddTask()" id="body"></body>
+<body onload="initAddTask()" onclick="onBodyClick()" id="body"></body>
 
 </html>
