--- a/add_task.html
+++ b/add_task.html
@@ -9,7 +9,8 @@
   <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-database-compat.js"></script>
 
-  <!-- <script src="./script.js"></script> -->
+ 
+  <script src="./script.js" defer></script>
   <script src="./scripts/add_task.js" defer></script>
   <script src="./scripts/add_task_template.js" defer></script>
   <script src="./scripts/template.js" defer></script>
