Adds responsive footer navigation for mobile devices. Hide sidebar, show footer

--- a/sidebar.html
+++ b/sidebar.html
@@ -6,11 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
     <link rel="stylesheet" type="text/css" href="./css/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-
-    <script src="script.js"></script>
+    <footer class="footer-nav-cnt">
+        <nav class="footer-nav">
+            <a href="summary.html" class="footer-nav-link" data-page="summary.html">
+                <div class="footer-nav-link-cnt">
+                    <img src="assets/svg/summary-icon.svg">
+                    <span>Summary</span>
+                </div>
+            </a>
+            <a href="add_task.html" class="footer-nav-link" data-page="add_task.html">
+                <div class="footer-nav-link-cnt">
+                    <img src="assets/svg/edit-icon.svg">
+                    <span>Add Task</span>
+                </div>
+            </a>
+            <a href="board.html" class="footer-nav-link" data-page="board.html">
+                <div class="footer-nav-link-cnt">
+                    <img src="assets/svg/board-icon.svg">
+                    <span>Board</span>
+                </div>
+            </a>
+            <a href="contact.html" class="footer-nav-link" data-page="contact.html">
+                <div class="footer-nav-link-cnt">
+                    <img src="assets/svg/contact-icon.svg">
+                    <span>Contacts</span>
+                </div>
+            </a>
+        </nav>
+    </footer>
 </body>
 
 </html>
