--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join</title>
 
-    <script src="scripts/login.js"></script>
-    <script src="scripts/signup.js"></script>
+    <script src="scripts/login.js" defer></script>
+    <script src="scripts/signup.js" defer></script>
     <script src="scripts/login_signup_template.js"></script>
 
     <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
