--- a/board_alex.html
+++ b/board_alex.html
@@ -18,8 +18,8 @@
   <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
   <link rel="stylesheet" type="text/css" href="./css/board_alex.css" />
 </head>
-<!--<body onload="initBoard()" id="body"></body>-->
-<body>
+<!--<body onload="initBoardAlex()" id="body"></body>-->
+<body onload="initBoardAlex()" id="body">
   <main class="board-main">
     <header class="board-header">
       <h1 class="board-hdl">Board</h1>
