--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="form-btn-cnt">
                         <button id="login_btn" type="submit" class="btn btn-primary" disabled>Log in</button>
-                        <button onclick="doGuestLogin();" type="button" class="btn btn-secondary">
+                        <button onclick="openSummaryPage();" type="button" class="btn btn-secondary">
                             Guest log in
                         </button>
                     </div>
