--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./scripts/login_signup_template.js"></script>
 
     <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="stylesheet" type="text/css" href="./css/login.css" />
   </head>
 
