search add task

--- a/board.html
+++ b/board.html
@@ -9,14 +9,17 @@
   <script src="./scripts/template.js"></script>
   <script src="./scripts/header.js"></script>
   <script src="./scripts/navigate.js"></script>
-  <script src="./scripts/board_template.js"></script>
   <script src="./scripts/board.js"></script>
+  <script src="./scripts/board_template.js"></script>
+  <script src="./scripts/add_task.js"></script>
+  <script src="./scripts/add_task_template.js"></script>
 
   <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
   <link rel="stylesheet" type="text/css" href="./style.css" />
   <link rel="stylesheet" type="text/css" href="./css/header.css" />
   <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
   <link rel="stylesheet" type="text/css" href="./css/board.css" />
+  <link rel="stylesheet" type="text/css" href="./css/add_task.css" />
 </head>
 <body onload="initBoard()" id="body"></body>
 </html>
