--- a/board_alex.html
+++ b/board_alex.html
@@ -18,7 +18,6 @@
   <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
   <link rel="stylesheet" type="text/css" href="./css/board_alex.css" />
 </head>
-<!--<body onload="initBoardAlex()" id="body"></body>-->
 <body onload="initBoardAlex()" id="body">
   <main class="board-main">
     <header class="board-header">
@@ -45,6 +44,26 @@
           </button>
         </div>
         <div class="task-cnt">
+          <div class="task-item">
+            <h3 class="task-category">User Story</h3>
+            <h4 class="task-title">Kochwelt Page & Recipe Recommender</h4>
+            <p class="task-description">Build a page for the Kochwelt app where users can find recipes and recommend
+              them to their friends.</p>
+            <div class="subtask-cnt">
+              <progress class="subtask-progress" value="50" max="100"></progress>
+              <span class="subtask-count">1/2 Subtasks</span>
+            </div>
+            <div class="assigned-users-cnt">
+              <div class="initials-cnt">
+                <div class="initials">AM</div>
+                <div class="initials">EM</div>
+                <div class="initials">MB</div>
+              </div>
+              <div class="priority-cnt">
+                <img src="./assets/svg/prio_medium.svg" alt="">
+              </div>
+            </div>
+          </div>
           <p class="no-task">No tasks To do</p>
         </div>
       </section>
