--- a/board_alex.html
+++ b/board_alex.html
@@ -9,8 +9,7 @@
   <script src="./scripts/template.js"></script>
   <script src="./scripts/header.js"></script>
   <script src="./scripts/navigate.js"></script>
-  <script src="./scripts/board_template.js"></script>
-  <script src="./scripts/board.js"></script>
+  <script src="./scripts/alex-board.js"></script>
 
   <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
   <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -19,7 +18,7 @@
   <link rel="stylesheet" type="text/css" href="./css/board_alex.css" />
 </head>
 <body onload="initBoardAlex()" id="body">
-  <main class="board-main">
+  <!-- <main class="board-main">
     <header class="board-header">
       <h1 class="board-hdl">Board</h1>
       <div class="right-header-cnt">
@@ -45,7 +44,7 @@
         </div>
         <div class="task-cnt">
           <div class="task-item">
-            <h3 class="task-category">User Story</h3>
+            <h3 class="task-category user">User Story</h3>
             <h4 class="task-title">Kochwelt Page & Recipe Recommender</h4>
             <p class="task-description">Build a page for the Kochwelt app where users can find recipes and recommend
               them to their friends.</p>
@@ -75,29 +74,50 @@
           </button>
         </div>
         <div class="task-cnt">
-          <p class="no-task">No tasks In progress</p>
-        </div>
-      </section>
-      <section class="section-cnt">
-        <div class="section-title-cnt">
-          <h2 class="section-title">Await feedback</h2>
-          <button class="section-add-btn btn-transparent">
-            <img src="./assets/svg/board_add.svg" alt="">
-          </button>
-        </div>
-        <div class="task-cnt">
-          <p class="no-task">No tasks Await feedback</p>
-        </div>
-      </section>
-      <section class="section-cnt">
-        <div class="section-title-cnt">
-          <h2 class="section-title">Done</h2>
-        </div>
-        <div class="task-cnt">
-          <p class="no-task">No tasks Done</p>
-        </div>
-      </section>
-    </section>
-  </main>
+          <div class="task-item">
+            <h3 class="task-category technical">Technical Task</h3>
+            <h4 class="task-title">Kochwelt Page & Recipe Recommender</h4>
+            <p class="task-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A, recusandae quidem!
+              Quibusdam tenetur id illum. Esse fugiat soluta velit alias distinctio ut commodi, itaque incidunt nam
+              eligendi labore. Vero, ut?</p>
+            <div class="subtask-cnt">
+              <!-- <progress class="subtask-progress" value="50" max="100"></progress>
+              <span class="subtask-count">1/2 Subtasks</span> -->
+  </div>
+  <div class="assigned-users-cnt">
+    <div class="initials-cnt">
+      <div class="initials">AM</div>
+      <div class="initials">EM</div>
+      <div class="initials">MB</div>
+    </div>
+    <div class="priority-cnt">
+      <img src="./assets/svg/prio_medium.svg" alt="">
+    </div>
+  </div>
+  </div>
+  <p class="no-task">No tasks In progress</p>
+  </div>
+  </section>
+  <section class="section-cnt">
+    <div class="section-title-cnt">
+      <h2 class="section-title">Await feedback</h2>
+      <button class="section-add-btn btn-transparent">
+        <img src="./assets/svg/board_add.svg" alt="">
+      </button>
+    </div>
+    <div class="task-cnt">
+      <p class="no-task">No tasks Await feedback</p>
+    </div>
+  </section>
+  <section class="section-cnt">
+    <div class="section-title-cnt">
+      <h2 class="section-title">Done</h2>
+    </div>
+    <div class="task-cnt">
+      <p class="no-task">No tasks Done</p>
+    </div>
+  </section>
+  </section>
+  </main> -->
 </body>
 </html>
