Inserted the media query stylesheet into the summary page

--- a/summary.html
+++ b/summary.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="./css/header.css" />
     <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
     <link rel="stylesheet" type="text/css" href="./css/summary.css" />
+    <link rel="stylesheet" type="text/css" href="./css/summary_media_queries.css" />
   </head>
   <body onload="initSummary()" id="body"></body>
 </html>
