--- a/board.html
+++ b/board.html
@@ -22,4 +22,4 @@
   <link rel="stylesheet" type="text/css" href="./css/add_task.css" />
 </head>
 <body onload="initBoard()" id="body"></body>
-</html>
+</html><button
