--- a/add_task.html
+++ b/add_task.html
@@ -19,6 +19,7 @@
   <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
   <link rel="stylesheet" type="text/css" href="./style.css" />
   <link rel="stylesheet" type="text/css" href="./css/add_task.css" />
+  <link rel="stylesheet" type="text/css" href="./css/add_task_media.css" />
   <link rel="stylesheet" type="text/css" href="./css/header.css" />
   <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
 </head>
