board.js add functions for the mobile version

--- a/board.html
+++ b/board.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Board</title>
-  
+
   <script src="./script.js"></script>
   <script src="./scripts/template.js"></script>
   <script src="./scripts/header.js"></script>
@@ -18,8 +18,9 @@
   <link rel="stylesheet" type="text/css" href="./style.css" />
   <link rel="stylesheet" type="text/css" href="./css/header.css" />
   <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
-  <link rel="stylesheet" type="text/css" href="./css/board.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="./css/board.css" /> -->
+  <link rel="stylesheet" type="text/css" href="./css/board_alex.css" />
   <link rel="stylesheet" type="text/css" href="./css/add_task.css" />
 </head>
 <body onload="initBoard()" id="body"></body>
-</html><button
+</html>
