--- a/board.html
+++ b/board.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" type="text/css" href="./style.css" />
   <link rel="stylesheet" type="text/css" href="./css/header.css" />
   <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
-  <!-- <link rel="stylesheet" type="text/css" href="./css/board.css" /> -->
+  <link rel="stylesheet" type="text/css" href="./css/board.css" />
   <link rel="stylesheet" type="text/css" href="./css/board_alex.css" />
   <link rel="stylesheet" type="text/css" href="./css/add_task.css" />
 </head>
