Optimize login page responsiveness

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               Log in
             </button>
             <button onclick="openSummaryPage(-1);" type="button" class="btn btn-secondary">
-              Guest log in
+              Guest Log in
             </button>
           </div>
         </form>
