added alex board files, css and js. Modified the two files for the mobile version

--- a/board.html
+++ b/board.html
@@ -11,6 +11,7 @@
   <script src="./scripts/navigate.js"></script>
   <script src="./scripts/board.js"></script>
   <script src="./scripts/board_template.js"></script>
+  <!-- <script src="./scripts/board_template_from_alex.js"></script> -->
   <script src="./scripts/add_task.js"></script>
   <script src="./scripts/add_task_template.js"></script>
 
@@ -19,8 +20,10 @@
   <link rel="stylesheet" type="text/css" href="./css/header.css" />
   <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
   <link rel="stylesheet" type="text/css" href="./css/board.css" />
-  <link rel="stylesheet" type="text/css" href="./css/board_alex.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="./css/board_alex.css" /> -->
   <link rel="stylesheet" type="text/css" href="./css/add_task.css" />
 </head>
-<body onload="initBoard()" id="body"></body>
+<body onload="initBoard()" id="body">
+
+</body>
 </html>
