--- a/add_task.html
+++ b/add_task.html
@@ -8,10 +8,12 @@
 
   <script src="./script.js" defer></script>
   <script src="./scripts/add_task.js" defer></script>
+  <script src="./scripts/add_subtask.js" defer></script>
   <script src="./scripts/add_task_template.js" defer></script>
   <script src="./scripts/template.js" defer></script>
   <script src="./scripts/header.js" defer></script>
   <script src="./scripts/navigate.js" defer></script>
+  <script src="./scripts/contact.js" defer></script>
 
   <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
   <link rel="stylesheet" type="text/css" href="./style.css" />
