--- a/board.html
+++ b/board.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" type="text/css" href="./css/board.css" />
   <!-- <link rel="stylesheet" type="text/css" href="./css/board_alex.css" /> -->
   <link rel="stylesheet" type="text/css" href="./css/add_task.css" />
+  <link rel="stylesheet" type="text/css" href="./css/add_task_media.css" />
 </head>
 <body onload="initBoard()" id="body">
 
