changed css for contact list and sorted in new css files and made edit contact responsive

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,15 @@
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/sidebar.css" />
     <link rel="stylesheet" href="css/contact.css" />
-    <link rel="stylesheet" href="css/add_contact_overlay.css" />
+    <link rel="stylesheet" href="css/contact_overlay.css" />
+    <link rel="stylesheet" href="css/contact_overlay_mobile.css" />
+    <link rel="stylesheet" href="css/contact_form.css" />
+    <link rel="stylesheet" href="css/contact_responsive.css" />
+
+    <!-- <link rel="stylesheet" href="css/add_contact_overlay.css" /> -->
   </head>
 
-  <body onload="initContacts()" id="body"></body>
+  <body onload="initContacts()" id="body">
+    <div id="add-contact-overlay-mobile" class="hidden"></div>
+  </body>
 </html>
