Fixed UI bugs for edit/add contacts and added JSDoc to all functions

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,8 @@
 
   <body id="body">
     <script>
+      window.addContactOverlayOpen = false;
+      window.currentEditContactId = null;
       window.addEventListener("DOMContentLoaded", function () {
         initContacts();
         handleViewportResize();
