edited board.html script link

--- a/board.html
+++ b/board.html
@@ -13,7 +13,9 @@
   <script src="./scripts/board_template.js"></script>
   <!-- <script src="./scripts/board_template_from_alex.js"></script> -->
   <script src="./scripts/add_task.js"></script>
+  <script src="./scripts/add_subtask.js"></script>
   <script src="./scripts/add_task_template.js"></script>
+  <script src="./scripts/contact.js"></script>
 
   <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
   <link rel="stylesheet" type="text/css" href="./style.css" />
