--- a/add_task.html
+++ b/add_task.html
@@ -13,7 +13,7 @@
   <script src="./scripts/template.js" defer></script>
   <script src="./scripts/header.js" defer></script>
   <script src="./scripts/navigate.js" defer></script>
-  <script src="./scripts/contact.js" defer></script>
+  <script src="./scripts/contact_utils.js" defer></script>
 
   <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
   <link rel="stylesheet" type="text/css" href="./style.css" />
