--- a/board.html
+++ b/board.html
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Board</title>
 
-  <script src="./script.js"></script>
-  <script src="./scripts/template.js"></script>
-  <script src="./scripts/header.js"></script>
-  <script src="./scripts/navigate.js"></script>
-  <script src="./scripts/board.js"></script>
-  <script src="./scripts/board_template.js"></script>
+  <script src="./script.js" defer></script>
+  <script src="./scripts/template.js" defer></script>
+  <script src="./scripts/header.js" defer></script>
+  <script src="./scripts/navigate.js" defer></script>
+  <script src="./scripts/board.js" defer></script>
+  <script src="./scripts/board_template.js" defer></script>
   <!-- <script src="./scripts/board_template_from_alex.js"></script> -->
-  <script src="./scripts/add_task.js"></script>
-  <script src="./scripts/add_subtask.js"></script>
-  <script src="./scripts/add_task_template.js"></script>
-  <script src="./scripts/contact.js"></script>
+  <script src="./scripts/add_task.js" defer></script>
+  <script src="./scripts/add_subtask.js" defer></script>
+  <script src="./scripts/add_task_template.js" defer></script>
+  <script src="./scripts/contact_utils.js" defer></script>
 
   <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
   <link rel="stylesheet" type="text/css" href="./style.css" />
