--- a/add_task.html
+++ b/add_task.html
@@ -7,9 +7,18 @@
   <title>Add task</title>
 
   <script src="./script.js" defer></script>
-  <script src="./scripts/add_task.js" defer></script>
-  <script src="./scripts/add_subtask.js" defer></script>
+
   <script src="./scripts/add_task_template.js" defer></script>
+  <script src="./scripts/add_task_core.js" defer></script>
+  <script src="./scripts/add_task_validation.js" defer></script>
+  <script src="./scripts/add_task_subtask.js" defer></script>
+  <script src="./scripts/add_task_contacts.js" defer></script>
+  <script src="./scripts/add_task_dropdowns.js" defer></script>
+  <script src="./scripts/add_task_reset.js" defer></script>
+  <script src="./scripts/add_task_data.js" defer></script>
+  <script src="./scripts/add_task_ui.js" defer></script>
+
+
   <script src="./scripts/template.js" defer></script>
   <script src="./scripts/header.js" defer></script>
   <script src="./scripts/navigate.js" defer></script>
