added priority select, contats select,subtasks render functions to edit overlay

--- a/board.html
+++ b/board.html
@@ -6,16 +6,24 @@
   <title>Board</title>
 
   <script src="./script.js" defer></script>
+
   <script src="./scripts/template.js" defer></script>
   <script src="./scripts/header.js" defer></script>
   <script src="./scripts/navigate.js" defer></script>
+  <script src="./scripts/contact_utils.js" defer></script>
+
   <script src="./scripts/board.js" defer></script>
   <script src="./scripts/board_template.js" defer></script>
   <!-- <script src="./scripts/board_template_from_alex.js"></script> -->
-  <script src="./scripts/add_task.js" defer></script>
-  <script src="./scripts/add_subtask.js" defer></script>
   <script src="./scripts/add_task_template.js" defer></script>
-  <script src="./scripts/contact_utils.js" defer></script>
+  <script src="./scripts/add_task_core.js" defer></script>
+  <script src="./scripts/add_task_validation.js" defer></script>
+  <script src="./scripts/add_task_subtask.js" defer></script>
+  <script src="./scripts/add_task_contacts.js" defer></script>
+  <script src="./scripts/add_task_dropdowns.js" defer></script>
+  <script src="./scripts/add_task_reset.js" defer></script>
+  <script src="./scripts/add_task_data.js" defer></script>
+  <script src="./scripts/add_task_ui.js" defer></script>
 
   <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
   <link rel="stylesheet" type="text/css" href="./style.css" />
