--- a/signup.html
+++ b/signup.html
@@ -70,7 +70,7 @@
                         <input onchange="checkFormValidity()" type="checkbox" id="signup_privacyCheckbox"
                             name="privacyPolicy" required>
                         <label for="signup_privacyCheckbox">
-                            <img class="check-box-png" src="" alt="Check Box" />
+                            <img class="check-box-png" alt="Check Box" />
                             <span>
                                 I accept the <a href="privacy_policy.html">Privacy Policy</a>
                             </span>
