renaming files in camelcase

--- a/addTask.html
+++ b/addTask.html
@@ -8,15 +8,15 @@
 
   <script src="./script.js" defer></script>
 
-  <script src="./scripts/add_task_template.js" defer></script>
-  <script src="./scripts/add_task_core.js" defer></script>
-  <script src="./scripts/add_task_validation.js" defer></script>
-  <script src="./scripts/add_task_subtask.js" defer></script>
-  <script src="./scripts/add_task_contacts.js" defer></script>
-  <script src="./scripts/add_task_dropdowns.js" defer></script>
-  <script src="./scripts/add_task_reset.js" defer></script>
-  <script src="./scripts/add_task_data.js" defer></script>
-  <script src="./scripts/add_task_ui.js" defer></script>
+  <script src="./scripts/addTaskTemplate.js" defer></script>
+  <script src="./scripts/addTaskCore.js" defer></script>
+  <script src="./scripts/addTaskValidation.js" defer></script>
+  <script src="./scripts/addTaskSubtask.js" defer></script>
+  <script src="./scripts/addTaskContacts.js" defer></script>
+  <script src="./scripts/addTaskDropdowns.js" defer></script>
+  <script src="./scripts/addTaskReset.js" defer></script>
+  <script src="./scripts/addTaskData.js" defer></script>
+  <script src="./scripts/addTaskUi.js" defer></script>
 
 
   <script src="./scripts/template.js" defer></script>
@@ -26,8 +26,8 @@
 
   <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
   <link rel="stylesheet" type="text/css" href="./style.css" />
-  <link rel="stylesheet" type="text/css" href="./css/add_task.css" />
-  <link rel="stylesheet" type="text/css" href="./css/add_task_media.css" />
+  <link rel="stylesheet" type="text/css" href="./css/addTask.css" />
+  <link rel="stylesheet" type="text/css" href="./css/addTaskMedia.css" />
   <link rel="stylesheet" type="text/css" href="./css/header.css" />
   <link rel="stylesheet" type="text/css" href="./css/sidebar.css" />
 </head>
