--- a/board.html
+++ b/board.html
@@ -13,6 +13,7 @@
   <script src="./scripts/contact_utils.js" defer></script>
 
   <script src="./scripts/board.js" defer></script>
+  <script src="./scripts/board_open_overlays.js" defer></script>
   <script src="./scripts/board_template.js" defer></script>
   <script src="./scripts/addTaskTemplate.js" defer></script>
   <script src="./scripts/addTaskCore.js" defer></script>
