Summary template moved to summary_template.js and script references updated in summary.html

--- a/summary.html
+++ b/summary.html
@@ -9,6 +9,7 @@
     <script src="./scripts/template.js"></script>
     <script src="./scripts/header.js"></script>
     <script src="./scripts/navigate.js"></script>
+    <script src="./scripts/summary_template.js"></script>
     <script src="./scripts/summary.js"></script>
 
     <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
