user appears in contact list after sign up

--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join</title>
 
+    <script src="scripts/contact_api.js" defer></script>
     <script src="scripts/signup.js" defer></script>
     <script src="scripts/loginSignupTemplate.js"></script>
 
