changed file names to camelCase

--- a/contact.html
+++ b/contact.html
@@ -12,24 +12,24 @@
     <script src="./scripts/template.js"></script>
     <script src="./scripts/header.js"></script>
     <script src="./scripts/navigate.js"></script>
-    <script src="./scripts/contact_template.js"></script>
-    <script src="./scripts/contact_utils.js"></script>
-    <script src="./scripts/contact_api.js"></script>
-    <script src="./scripts/contact_list.js"></script>
-    <script src="./scripts/contact_overlay.js"></script>
-    <script src="./scripts/contact_detail.js"></script>
-    <script src="./scripts/contact_menu_mobile.js"></script>
-    <script src="./scripts/contact_init.js"></script>
+    <script src="./scripts/contactTemplate.js"></script>
+    <script src="./scripts/contactUtils.js"></script>
+    <script src="./scripts/contactApi.js"></script>
+    <script src="./scripts/contactList.js"></script>
+    <script src="./scripts/contactOverlay.js"></script>
+    <script src="./scripts/contactDetail.js"></script>
+    <script src="./scripts/contactMenuMobile.js"></script>
+    <script src="./scripts/contactInit.js"></script>
 
     <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/sidebar.css" />
     <link rel="stylesheet" href="css/contact.css" />
-    <link rel="stylesheet" href="css/contact_overlay.css" />
-    <link rel="stylesheet" href="css/contact_overlay_mobile.css" />
-    <link rel="stylesheet" href="css/contact_form.css" />
-    <link rel="stylesheet" href="css/contact_responsive.css" />
+    <link rel="stylesheet" href="css/contactOverlay.css" />
+    <link rel="stylesheet" href="css/contactOverlayMobile.css" />
+    <link rel="stylesheet" href="css/contactForm.css" />
+    <link rel="stylesheet" href="css/contactResponsive.css" />
   </head>
 
   <body id="body">
