changed file names to camelCase

--- a/legalNotice.html
+++ b/legalNotice.html
@@ -9,13 +9,13 @@
   <script src="./scripts/template.js" defer></script>
   <script src="./scripts/header.js" defer></script>
   <script src="./scripts/navigate.js" defer></script>
-  <script src="./scripts/legal_notice.js" defer></script>
+  <script src="./scripts/legalNotice.js" defer></script>
 
   <link rel="icon" href="assets/svg/favicon_logo.svg" />
   <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="./css/header.css" />
   <link rel="stylesheet" href="./css/sidebar.css" />
-  <link rel="stylesheet" href="./css/legal_notice.css" />
+  <link rel="stylesheet" href="./css/legalNotice.css" />
 </head>
 <body onload="initLegalNotice()"></body>
 </html>
