--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -9,13 +9,13 @@
   <script src="./scripts/template.js" defer></script>
   <script src="./scripts/header.js" defer></script>
   <script src="./scripts/navigate.js" defer></script>
-  <script src="./scripts/privacy_policy.js" defer></script>
+  <script src="./scripts/privacyPolicy.js" defer></script>
 
   <link rel="icon" href="assets/svg/favicon_logo.svg" type="image/svg+xml" />
   <link rel="stylesheet" href="./style.css" />
   <link rel="stylesheet" href="./css/header.css" />
   <link rel="stylesheet" href="./css/sidebar.css" />
-  <link rel="stylesheet" href="./css/privacy_policy.css" />
+  <link rel="stylesheet" href="./css/privacyPolicy.css" />
 </head>
 <body onload="initPrivacyPolicy()"></body>
 </html>
