--- a/signup.html
+++ b/signup.html
@@ -73,7 +73,7 @@
                         <label for="signup_privacyCheckbox">
                             <img class="check-box-png" alt="Check Box" />
                             <span>
-                                I accept the <a href="privacy_policy.html">Privacy Policy</a>
+                                I accept the <a href="privacyPolicy.html">Privacy Policy</a>
                             </span>
                         </label>
                     </div>
@@ -84,8 +84,8 @@
             </div>
         </div>
         <footer class="footer-login-signup">
-            <a href="privacy_policy.html">Privacy Policy</a>
-            <a href="legal_notice.html">Legal notice</a>
+            <a href="privacyPolicy.html">Privacy Policy</a>
+            <a href="legalNotice.html">Legal notice</a>
         </footer>
         <div class="success-message-cnt" id="success-message-cnt">
             <div class="success-message" id="success-message">
