--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       </div>
     </div>
     <footer class="footer-login-signup">
-      <a href="privacy_policy.html">Privacy Policy</a>
-      <a href="legal_notice.html">Legal notice</a>
+      <a href="privacyPpolicy.html">Privacy Policy</a>
+      <a href="legalNotice.html">Legal notice</a>
     </footer>
   </main>
 </body>
