--- a/board.html
+++ b/board.html
@@ -10,7 +10,7 @@
   <script src="./scripts/template.js" defer></script>
   <script src="./scripts/header.js" defer></script>
   <script src="./scripts/navigate.js" defer></script>
-  <script src="./scripts/contact_utils.js" defer></script>
+  <script src="./scripts/contactUtils.js" defer></script>
 
   <script src="./scripts/board.js" defer></script>
   <script src="./scripts/board_open_overlays.js" defer></script>
