bugfix index.html link to privacyPolicy

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </div>
     <footer class="footer-login-signup">
-      <a href="privacyPpolicy.html">Privacy Policy</a>
+      <a href="privacyPolicy.html">Privacy Policy</a>
       <a href="legalNotice.html">Legal notice</a>
     </footer>
   </main>
